--- a/index.html
+++ b/index.html
@@ -4,18 +4,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">  
   <title>Frontend Mentor | [Blogr]</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Product
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent my-3 px-3">
+    <div class="container">
+      <a href="#" class="navbar-brand">
+        <img src="images/logo.svg" alt="Blogr">
+      </a>
+      <button class="navbar-toggler hamburger-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+        <img class="hamburger-icon" src="images/icon-hamburger.svg" alt="">
+    </button>
+    </div>
+    <div class="collapse navbar-collapse" id="navmenu">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">1</li>
+        <li class="nav-item">2</li>
+        <li class="nav-item">3</li>
+      </ul>
+    </div>
+  </nav>
+  <!-- Showcase -->
+  <section class="px-3 showcase">
+    <div class="container">
+      <h1 class="">A modern publishing platform</h1>
+      <p>Grow your audience and build your online brand</p>
+      <div class="d-flex justify-content-center align-items-center">
+        <a href="" class="btn btn-light showcase-btn" id="start">Start for Free</a>
+        <a href="" class="btn btn-outline-light mx-2 showcase-btn" id="learn">Learn More</a>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Product
 
   Overview
   Pricing
@@ -89,11 +117,13 @@
   
   Contact
   Newsletter
-  LinkedIn
+  LinkedIn -->
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
