collapse links within navmenu collapse

--- a/index.html
+++ b/index.html
@@ -23,11 +23,22 @@
     </button>
     </div>
     <div class="collapse navbar-collapse" id="navmenu">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">1</li>
-        <li class="nav-item">2</li>
-        <li class="nav-item">3</li>
-      </ul>
+      <div class="navbar-nav text-center">
+        <div class="nav-item navbar-toggler" data-bs-toggle="collapse" data-bs-target="#product">Product</div>
+        <div class="nav-item navbar-toggler" data-bs-toggle="collapse" data-bs-target="#company">Company</div>
+        <div class="nav-item navbar-toggler" data-bs-toggle="collapse" data-bs-target="#connect">Connect</div>
+        <div class="collapse navbar-collapse" id="connect">
+          <div class="navbar-nav text-center">
+            <div class="nav-item">Contact</div>
+            <div class="nav-item">Newsletter</div>
+            <div class="nav-item">LinkedIn</div>
+          </div>
+        </div>
+      </div>
+      <div class="navbar-nav text-center">
+        <div class="nav-item"><button class="btn">Login</button></div>
+        <div class="nav-item"><button class="btn">Sign Up</button></div>
+      </div>
     </div>
   </nav>
   <!-- Showcase -->
