--- a/index.html
+++ b/index.html
@@ -18,27 +18,29 @@
       <a href="#" class="navbar-brand">
         <img src="images/logo.svg" alt="Blogr">
       </a>
-      <button class="navbar-toggler hamburger-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-        <img class="hamburger-icon" src="images/icon-hamburger.svg" alt="">
+      <button class="navbar-toggler hamburger-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" collapsed="false">
+        <!-- <img class="hamburger-icon" src="images/icon-hamburger.svg" alt=""> -->
     </button>
     <div class="collapse navbar-collapse" id="navmenu">
-      <div class="navbar-nav text-center nav-btns">
-        <a role="button" class="btn nav-item nav-item-main" data-bs-toggle="collapse" href="#product">Product </a>
-        <a role="button" class="btn nav-item nav-item-main" data-bs-toggle="collapse" href="#company">Company </a>
-        <div class="position-relative" id="connectNav">
-          <a role="button" class="btn nav-item nav-item-main" data-bs-toggle="collapse" href="#connect" id="connectBtn">Connect </a>
-          <div class="collapse nav-links" id="connect">
-            <div class="navbar-nav text-center">
-              <div class="nav-item"><a href="" class="nav-link">Contact</a></div>
-              <div class="nav-item"><a href="" class="nav-link">Newsletter</a></div>
-              <div class="nav-item"><a href="" class="nav-link">LinkedIn</a></div>
+      <div class="nav-btns">
+        <div class="navbar-nav text-center">
+          <a role="button" class="btn nav-item nav-item-main" data-bs-toggle="collapse" href="#product">Product </a>
+          <a role="button" class="btn nav-item nav-item-main" data-bs-toggle="collapse" href="#company">Company </a>
+          <div class="position-relative" id="connectNav">
+            <a role="button" class="btn nav-item nav-item-main" data-bs-toggle="collapse" href="#connect" id="connectBtn" collapsed="false">Connect </a>
+            <div class="collapse" id="connect">
+              <div class="navbar-nav nav-links text-center">
+                <div class="nav-item"><a href="" class="nav-link">Contact</a></div>
+                <div class="nav-item"><a href="" class="nav-link">Newsletter</a></div>
+                <div class="nav-item"><a href="" class="nav-link">LinkedIn</a></div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="navbar-nav text-center ms-auto">
-        <div class="nav-item"><button class="btn">Login</button></div>
-        <div class="nav-item"><button class="btn">Sign Up</button></div>
+        <div class="navbar-nav text-center nav-account ms-auto">
+          <div class="nav-item"><button class="btn" id="login">Login</button></div>
+          <div class="nav-item"><button class="btn" id="signup">Sign Up</button></div>
+        </div>
       </div>
     </div>
     </div>
