collapse style mobile desktop

--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
           <a role="button" class="btn nav-item nav-item-main" data-bs-toggle="collapse" href="#company">Company </a>
           <div class="position-relative" id="connectNav">
             <a role="button" class="btn nav-item nav-item-main" data-bs-toggle="collapse" href="#connect" id="connectBtn" collapsed="false">Connect </a>
-            <div class="collapse" id="connect">
-              <div class="navbar-nav nav-links text-center">
-                <div class="nav-item"><a href="" class="nav-link">Contact</a></div>
+            <div class="collapse nav-links " id="connect">
+              <div class="navbar-nav text-center">
+                <div class="container p-3">
+                  <div class="nav-item"><a href="" class="nav-link">Contact</a></div>
                 <div class="nav-item"><a href="" class="nav-link">Newsletter</a></div>
                 <div class="nav-item"><a href="" class="nav-link">LinkedIn</a></div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="navbar-nav text-center nav-account ms-auto">
-          <div class="nav-item"><button class="btn" id="login">Login</button></div>
-          <div class="nav-item"><button class="btn" id="signup">Sign Up</button></div>
-        </div>
+      </div>
+      <div class="navbar-nav text-center nav-account ms-auto">
+        <div class="nav-item"><button class="btn" id="login">Login</button></div>
+        <div class="nav-item"><button class="btn" id="signup">Sign Up</button></div>
       </div>
     </div>
     </div>
