--- a/index.html
+++ b/index.html
@@ -18,23 +18,31 @@
       <a href="#" class="navbar-brand">
         <img src="images/logo.svg" alt="Blogr">
       </a>
-      <button class="navbar-toggler hamburger-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" collapsed="false">
-        <!-- <img class="hamburger-icon" src="images/icon-hamburger.svg" alt=""> -->
-    </button>
-    <div class="collapse navbar-collapse" id="navmenu">
-      <div class="nav-btns">
-        <div class="navbar-nav text-center">
-          <a role="button" class="btn nav-item nav-item-main" data-bs-toggle="collapse" href="#product">Product </a>
-          <a role="button" class="btn nav-item nav-item-main" data-bs-toggle="collapse" href="#company">Company </a>
-          <div class="position-relative" id="connectNav">
-            <a role="button" class="btn nav-item nav-item-main" data-bs-toggle="collapse" href="#connect" id="connectBtn" collapsed="false">Connect </a>
-            <div class="collapse nav-links " id="connect">
-              <div class="navbar-nav text-center">
-                <div class="container p-3">
-                  <div class="nav-item"><a href="" class="nav-link">Contact</a></div>
-                <div class="nav-item"><a href="" class="nav-link">Newsletter</a></div>
-                <div class="nav-item"><a href="" class="nav-link">LinkedIn</a></div>
-                </div>
+      <button class="navbar-toggler border-0 p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" collapsed="false" aria-expanded="false">
+          <svg id="hamburger" width="32" height="18" xmlns="http://www.w3.org/2000/svg"><g fill="#FFF" fill-rule="evenodd"><path d="M0 0h32v2H0zM0 8h32v2H0zM0 16h32v2H0z"/></g></svg>
+          <svg id="close" width="26" height="26" xmlns="http://www.w3.org/2000/svg"><path d="M23.607.98l1.414 1.413L14.414 13l10.607 10.607-1.414 1.414L13 14.414 2.393 25.021.98 23.607 11.586 13 .98 2.393 2.393.98 13 11.586 23.607.98z" fill="#FFF" fill-rule="evenodd"/></svg>
+      </button>
+      <div class="collapse navbar-collapse" id="navmenu">
+        <div class="p-4 p-lg-0">
+          <div class="navbar-nav text-center">
+            <div class="position-relative nav-item">
+              <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#product">Product </a>
+            </div>
+            <div class="position-relative nav-item">
+              <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#company">Company </a>
+            </div>
+            <div class="position-relative nav-item" id="connectNav">
+              <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#connect" id="connectBtn" collapsed="false">Connect </a>
+              <div class="collapse nav-links" id="connect">
+                <div class="navbar-nav text-center">
+                  <div class="container p-3">
+                    <div class="nav-item">
+                      <a href="" class="nav-link secondary">Contact</a></div>
+                    <div class="nav-item">
+                      <a href="" class="nav-link secondary">Newsletter</a></div>
+                    <div class="nav-item">
+                      <a href="" class="nav-link secondary">LinkedIn</a></div>
+                  </div>
               </div>
             </div>
           </div>
@@ -44,7 +52,6 @@
         <div class="nav-item"><button class="btn" id="login">Login</button></div>
         <div class="nav-item"><button class="btn" id="signup">Sign Up</button></div>
       </div>
-    </div>
     </div>
   </nav>
 
