--- a/index.html
+++ b/index.html
@@ -23,17 +23,11 @@
           <svg id="close" width="26" height="26" xmlns="http://www.w3.org/2000/svg"><path d="M23.607.98l1.414 1.413L14.414 13l10.607 10.607-1.414 1.414L13 14.414 2.393 25.021.98 23.607 11.586 13 .98 2.393 2.393.98 13 11.586 23.607.98z" fill="#FFF" fill-rule="evenodd"/></svg>
       </button>
       <div class="collapse navbar-collapse" id="navmenu">
-        <div class="p-4 p-lg-0">
+        <div class="p-4 p-lg-0 px-lg-4">
           <div class="navbar-nav text-center">
             <div class="position-relative nav-item">
               <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#product">Product </a>
-            </div>
-            <div class="position-relative nav-item">
-              <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#company">Company </a>
-            </div>
-            <div class="position-relative nav-item" id="connectNav">
-              <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#connect" id="connectBtn" collapsed="false">Connect </a>
-              <div class="collapse nav-links" id="connect">
+              <div class="collapse nav-links" id="product">
                 <div class="navbar-nav text-center">
                   <div class="container p-3">
                     <div class="nav-item">
@@ -46,12 +40,43 @@
               </div>
             </div>
           </div>
+          
+          <div class="position-relative nav-item">
+            <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#company" aria-expanded="false">Company </a>
+            <div class="collapse nav-links" id="company">
+              <div class="navbar-nav text-center">
+                <div class="container p-3">
+                  <div class="nav-item">
+                    <a href="" class="nav-link secondary">Contact</a></div>
+                  <div class="nav-item">
+                    <a href="" class="nav-link secondary">Newsletter</a></div>
+                  <div class="nav-item">
+                    <a href="" class="nav-link secondary">LinkedIn</a></div>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="position-relative nav-item">
+          <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#connect" aria-expanded="false">Connect </a>
+          <div class="collapse nav-links" id="connect">
+            <div class="navbar-nav text-center">
+              <div class="container p-3">
+                <div class="nav-item">
+                  <a href="" class="nav-link secondary">Contact</a></div>
+                <div class="nav-item">
+                  <a href="" class="nav-link secondary">Newsletter</a></div>
+                <div class="nav-item">
+                  <a href="" class="nav-link secondary">LinkedIn</a></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="navbar-nav text-center nav-account ms-auto">
-        <div class="nav-item"><button class="btn" id="login">Login</button></div>
-        <div class="nav-item"><button class="btn" id="signup">Sign Up</button></div>
-      </div>
+    </div>
+    <div class="navbar-nav text-center nav-account ms-auto">
+      <div class="nav-item"><button class="btn" id="login">Login</button></div>
+      <div class="nav-item"><button class="btn" id="signup">Sign Up</button></div>
+    </div>
     </div>
   </nav>
 
