--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
       </div>
     </div>
-    <div class="navbar-nav text-center nav-account ms-auto">
+    <div class="navbar-nav text-center user-logged-out ms-auto">
       <div class="nav-item"><button class="btn" id="login">Login</button></div>
       <div class="nav-item"><button class="btn" id="signup">Sign Up</button></div>
     </div>
@@ -173,8 +173,9 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
-
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
