--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent my-3 px-3">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent my-3">
+    <div class="container-fluid">
       <a href="#" class="navbar-brand">
         <img src="images/logo.svg" alt="Blogr">
       </a>
@@ -23,10 +23,10 @@
           <svg id="close" width="26" height="26" xmlns="http://www.w3.org/2000/svg"><path d="M23.607.98l1.414 1.413L14.414 13l10.607 10.607-1.414 1.414L13 14.414 2.393 25.021.98 23.607 11.586 13 .98 2.393 2.393.98 13 11.586 23.607.98z" fill="#FFF" fill-rule="evenodd"/></svg>
       </button>
       <div class="collapse navbar-collapse" id="navmenu">
-        <div class="p-4 p-lg-0 px-lg-4">
+        <div class="p-4 p-lg-0 px-lg-5">
           <div class="navbar-nav text-center">
             <div class="position-relative nav-item">
-              <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#product">Product </a>
+              <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#product">Product  </a>
               <div class="collapse nav-links" id="product">
                 <div class="navbar-nav text-center">
                   <div class="container p-3">
@@ -42,7 +42,7 @@
           </div>
           
           <div class="position-relative nav-item">
-            <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#company" aria-expanded="false">Company </a>
+            <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#company" aria-expanded="false">Company  </a>
             <div class="collapse nav-links" id="company">
               <div class="navbar-nav text-center">
                 <div class="container p-3">
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="position-relative nav-item">
-          <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#connect" aria-expanded="false">Connect </a>
+          <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#connect" aria-expanded="false">Connect </i></a>
           <div class="collapse nav-links" id="connect">
             <div class="navbar-nav text-center">
               <div class="container p-3">
