desktop and mobile style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent my-3">
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container-fluid">
       <a href="#" class="navbar-brand">
         <img src="images/logo.svg" alt="Blogr">
@@ -86,8 +86,8 @@
       <h1 class="">A modern publishing platform</h1>
       <p>Grow your audience and build your online brand</p>
       <div class="d-flex justify-content-center align-items-center">
-        <a href="" class="btn btn-light showcase-btn" id="start">Start for Free</a>
-        <a href="" class="btn btn-outline-light mx-2 showcase-btn" id="learn">Learn More</a>
+        <button class="btn btn-light showcase-btn" id="start">Start for Free</button>
+        <button class="btn btn-outline-light mx-2 showcase-btn" id="learn">Learn More</button>
       </div>
     </div>
   </section>
