arrow toggle transition

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="p-4 p-lg-0 px-lg-5">
           <div class="navbar-nav text-center">
             <div class="position-relative nav-item">
-              <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#product">Product  </a>
+              <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#product">Product <i class="arrow"></i></a>
               <div class="collapse nav-links" id="product">
                 <div class="navbar-nav text-center">
                   <div class="container p-3">
@@ -42,7 +42,7 @@
           </div>
           
           <div class="position-relative nav-item">
-            <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#company" aria-expanded="false">Company  </a>
+            <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#company" aria-expanded="false">Company <i class="arrow"></i></a>
             <div class="collapse nav-links" id="company">
               <div class="navbar-nav text-center">
                 <div class="container p-3">
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="position-relative nav-item">
-          <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#connect" aria-expanded="false">Connect </i></a>
+          <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#connect" aria-expanded="false">Connect <i class="arrow"></i></a>
           <div class="collapse nav-links" id="connect">
             <div class="navbar-nav text-center">
               <div class="container p-3">
