--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="p-4 p-lg-0 px-lg-5">
           <div class="navbar-nav text-center">
             <div class="position-relative nav-item">
-              <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#product">Product <i class="arrow"></i></a>
+              <a class="nav-link main" role="button" data-bs-toggle="collapse" href="#product" aria-expanded="false">Product <i class="arrow"></i></a>
               <div class="collapse nav-links" id="product">
                 <div class="navbar-nav text-center">
                   <div class="container p-3">
