designed-for-future section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <!-- Showcase -->
   <section class="px-3 showcase">
     <div class="container">
-      <h1 class="">A modern publishing platform</h1>
+      <h1>A modern publishing platform</h1>
       <p>Grow your audience and build your online brand</p>
       <div class="d-flex justify-content-center align-items-center">
         <button class="btn btn-light showcase-btn" id="start">Start for Free</button>
@@ -92,6 +92,24 @@
     </div>
   </section>
 
+  <!-- Designed for future -->
+  <section class="designed-for-future text-center">
+    <h2>Designed for Future</h2>
+    <div class="d-flex flex-column-reverse flex-md-row align-items-center justify-content-center w-100">
+      <div>
+        <section>
+          <h2>title</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, pariatur.</p>
+        </section>
+        <section>
+          <h2>title</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, pariatur.</p>
+        </section>
+      </div>
+        <img class="d-block d-md-none" src="images/illustration-editor-mobile.svg" alt="">
+        <img class="d-none d-md-block" src="images/illustration-editor-desktop.svg" alt="">
+    </div>
+  </section>
 
   <!-- Product
 
