--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <!-- Showcase -->
   <section class="px-3 showcase">
-    <div class="container">
+    <div class="container d-flex flex-column align-items-center">
       <h1>A modern publishing platform</h1>
       <p>Grow your audience and build your online brand</p>
       <div class="d-flex justify-content-center align-items-center">
@@ -94,20 +94,24 @@
 
   <!-- Designed for future -->
   <section class="designed-for-future text-center">
-    <h2>Designed for Future</h2>
-    <div class="d-flex flex-column-reverse flex-md-row align-items-center justify-content-center w-100">
-      <div>
+    <h2>Designed for the future</h2>
+    <div class="d-flex flex-column-reverse flex-lg-row align-items-center justify-content-center w-100">
+      <div class="inner-section"> 
         <section>
-          <h2>title</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, pariatur.</p>
+          <h2>Introducing an extensible editor</h2>
+          <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+            The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+            videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+            change the looks of a blog.</p>
         </section>
         <section>
-          <h2>title</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, pariatur.</p>
+          <h2>Robust content management</h2>
+          <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+            by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
         </section>
       </div>
-        <img class="d-block d-md-none" src="images/illustration-editor-mobile.svg" alt="">
-        <img class="d-none d-md-block" src="images/illustration-editor-desktop.svg" alt="">
+        <img class="d-block d-lg-none" src="images/illustration-editor-mobile.svg" alt="">
+        <img class="d-none d-lg-block" src="images/illustration-editor-desktop.svg" alt="">
     </div>
   </section>
 
