designed-for-future section

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
   </section>
 
   <!-- Designed for future -->
-  <section class="designed-for-future text-center">
+  <section class="designed-for-future text-center position-relative d-flex flex-column justify-content-center align-items-center">
     <h2>Designed for the future</h2>
-    <div class="d-flex flex-column-reverse flex-lg-row align-items-center justify-content-center w-100">
+    <div class="d-flex flex-column-reverse flex-lg-row align-items-center justify-content-left">
       <div class="inner-section"> 
         <section>
           <h2>Introducing an extensible editor</h2>
@@ -110,8 +110,8 @@
             by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
         </section>
       </div>
-        <img class="d-block d-lg-none" src="images/illustration-editor-mobile.svg" alt="">
-        <img class="d-none d-lg-block" src="images/illustration-editor-desktop.svg" alt="">
+      <img class="d-block d-lg-none" src="images/illustration-editor-mobile.svg" alt="">
+      <img class="d-none d-lg-block" src="images/illustration-editor-desktop.svg" alt="">
     </div>
   </section>
 
