--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
     </div>
   </section>
 
+  <section class="art-infrastructure text-center d-flex flex-column flex-lg-row justify-content-center align-items-center">
+    <img src="images/illustration-phones.svg" alt="" class="phones">
+    <div>
+      <h1>State of the Art Infrastructure</h1>
+      <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
+    </div>
+  </section>
   <!-- Product
 
   Overview
